# jellyfin-rs

./: .env.example  Cargo.toml  LICENSE  README.md
src/: err.rs  lib.rs  user.rs  utils.rs
src/serde/: mod.rs  subtitle_mode_serde.rs
src/tests/: lib.rs  user.rs
