[package]
name = "jellyfin-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["media", "jellyfin", "streaming"]
categories = ["api-bindings"]
description = "An asynchronous Rust client library for interacting with the Jellyfin API. Currently in alpha, not all API endpoints are covered." 
homepage = "https://github.com/kaiserbh/jellyfin-rs"
repository = "https://github.com/kaiserbh/jellyfin-rs"
readme = "README.md"
authors = ["KaiserBh <kaiserbh.pl84i@simplelogin.com>"] 
include = [
    "src/**/*.rs", 
    "Cargo.toml",
    "README.md", 
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.11.24", features = ["rustls", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
sha1 = "0.10.6"
url = "2.5.0"
whoami = "1.4.1"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
dotenv = "0.15.0"
